# data_literacy

./: .gitignore  README.md  bicycle_accidents_heatmap_berlin.html  counting_stations_strava_matching.html  covariate_strava_data.ipynb  datasets_merge.ipynb  exploratory_data_analysis.ipynb  pyproject.toml  visualization_accident_data.ipynb
GNNUI/: .gitignore  README.md  requirements.txt
GNNUI/src/: build_feature_list.py  convert_parquet_to_csv.py  export_strava_segment_densities.py  h_adjacency_matrices.py  h_assert_statements.py  h_constants.py  h_data_preprocessing.py  h_early_stopping.py  h_evaluation.py  (+8 more)
figs/: plot_risk_for_one_Berlin_route.html  plot_risk_for_one_Berlin_route_overall.html  plot_risk_for_one_Berlin_route_relative.html  plot_segments_accidents_map.html  plot_traffic_volume_log.html
notebooks/: 01_data_preparation.ipynb  03_graph_and_routing.ipynb  04_paper.ipynb  build_junctions.ipynb  covariate_strava_data.ipynb  datasets_merge.ipynb  datasets_merge_final.ipynb  feature_analysis.ipynb  risk_conditioning.ipynb  routing_visualization_laisan.ipynb  score_routing.ipynb  segment_examples.ipynb  visualization_accident_data.ipynb  visualizations_paper.ipynb
report/: bibliography.bib  icml2025.sty  report_template.aux  report_template.bbl  report_template.blg  report_template.fdb_latexmk  report_template.fls  report_template.tex
src/: __init__.py  accidents.py  counting_stations.py  nodes.py  panels.py  preprocess_data.py  risk_estimates.py  routing_algorithm.py  routing_algorithms.py  routing_graph.py  segments.py  strava_exposure.py  utils.py
(+22 files in other folders)
