[project]
name = "data-literacy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastparquet>=2024.11.0",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "networkx>=3.6.1",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "tueplots>=0.2.1",
]
